<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/game_over_back">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#f5f5f5"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/close_button2"
        android:contentDescription="@string/close_button"/>
    <TextView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over_hint"
        android:layout_centerInParent="true"
        android:textSize="22sp"
        android:textColor="#f5f5f5"/>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_margin="5dp"
            android:background="#424242"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:id="@+id/get_money"
            android:textSize="20sp"
            android:textColor="#f5f5f5" />
    </LinearLayout>
</RelativeLayout>