<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/info_popup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress"
        android:layout_centerHorizontal="true"
        android:id="@+id/info"
        android:textSize="30sp"
        android:textColor="#f5f5f5"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/close_button"
        android:contentDescription="@string/close_button"/>
    <TextView
        android:id="@+id/from_2048"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scrolling_widget"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="#f5f5f5"/>
    <LinearLayout
        android:id="@+id/scrolling_widget"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:id="@+id/scroll_left"
            android:contentDescription="@string/arrow_left"/>

        <ImageView
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/kop10"
            android:id="@+id/preview_currency"
            android:contentDescription="@string/preview"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            android:id="@+id/scroll_right"
            android:contentDescription="@string/arrow_right"/>

    </LinearLayout>

</RelativeLayout>