<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/game_layout"
    android:background="#f2f2f2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/tab">

        <ImageView
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/new_game"
            android:padding="5dp"
            android:onClick="newGame"
            android:contentDescription="@string/new_game_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#424242"
            android:id="@+id/text_label"
            android:textSize="30sp"
            android:layout_centerInParent="true" />

        <ImageView
            android:padding="5dp"
            android:onClick="info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info"
            android:id="@+id/imageButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/info_button"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        android:background="@drawable/back"
        android:id="@+id/grid_view">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tab"
        android:id="@+id/stat_panel"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_currency1"
                android:textColor="#424242"
                android:textSize="20sp"
                android:gravity="center"
                />
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_currency2"
                android:textColor="#424242"
                android:textSize="20sp"
                android:gravity="center"
                />
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_record"
                android:textColor="#f9a825"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#f9a825"
                android:id="@+id/text_curr1"
                android:text="@string/zero"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#f9a825"
                android:id="@+id/text_curr2"
                android:textSize="20sp"
                android:text="@string/zero"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#424242"
                android:id="@+id/text_record"
                android:text="@string/zero"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/grid_view"
        android:padding="8dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingTop="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_label_bonus"
                android:text="@string/bonus"
                android:textSize="22sp"

                android:textColor="#f9a825" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_bonus"
                android:textColor="#424242"
                android:textSize="20sp"
                android:text="@string/zero"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/undoMove"
                android:src="@drawable/bonus_hint20"
                android:onClick="undoMove"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:contentDescription="@string/footer_bonus1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/bonus_hint40"
                android:onClick="removeLowLevel"
                android:layout_weight="1"
                android:id="@+id/trash"
                android:contentDescription="@string/footer_bonus2"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/bonus_hint60"
                android:onClick="addHighLevel"
                android:id="@+id/add"
                android:layout_weight="1"
                android:contentDescription="@string/footer_bonus3"/>

        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/dim_view">

    </View>

</RelativeLayout>